Add Assignment1 Module

--- a/UnrealAssignments.uproject
+++ b/UnrealAssignments.uproject
@@ -8,6 +8,14 @@
 			"Name": "UnrealAssignments",
 			"Type": "Runtime",
 			"LoadingPhase": "Default"
+		},
+		{
+			"Name": "Assignment1",
+			"Type": "Runtime",
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	],
 	"Plugins": [
