Add Assignment2 Module

--- a/UnrealAssignments.uproject
+++ b/UnrealAssignments.uproject
@@ -16,6 +16,14 @@
 			"AdditionalDependencies": [
 				"Engine"
 			]
+		},
+		{
+			"Name": "Assignment2",
+			"Type": "Runtime",
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	],
 	"Plugins": [
