Add TopDown Template to Project

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -57,6 +57,8 @@ bAuthorizeAutomaticWidgetVariableCreation=False
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/UnrealAssignments")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPerson",NewGameName="/Script/UnrealAssignments")
 +ActiveGameNameRedirects=(OldGameName="TP_ThirdPerson",NewGameName="/Script/UnrealAssignments")
++ActiveGameNameRedirects=(OldGameName="/Script/TP_TopDown",NewGameName="/Script/UnrealAssignments")
++ActiveGameNameRedirects=(OldGameName="TP_TopDown",NewGameName="/Script/UnrealAssignments")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="UnrealAssignmentsGameModeBase")
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
